ci(workflow): update k8s-bench-evals workflow for on-demand testing
Signed-off-by: Tommy Nguyen <tuannvm@hotmail.com>

--- a/.github/workflows/k8s-bench-evals.yaml
+++ b/.github/workflows/k8s-bench-evals.yaml
@@ -1,48 +1,57 @@
-# Workflow to run k8s-bench evaluations on push and PR
-name: k8s-bench-evals
+# Copyright 2025 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# This workflow allows PR owners who add new eval tasks to manually run tests on their changes using the GitHub Actions UI.
+#It is intended for self-service validation of new or modified evals before merging.
+name: On-Demand k8s-bench Eval Test
 
 on:
-  pull_request:
-    paths:
-      - 'k8s-bench/tasks/**'
-  push:
-    branches: [main]
-    paths:
-      - 'k8s-bench/tasks/**'
+  workflow_dispatch:
+    inputs:
+      task_pattern:
+        description: "Task name or glob pattern to test (e.g. scale-*, my-task)"
+        required: true
+        default: "scale-"
 
 jobs:
-  evals:
+  run-eval:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    permissions:
+      contents: "read"
+      id-token: "write"
     steps:
       - uses: actions/checkout@v4
-      - name: Install Node.js runtime
-        run: |
-          apt-get update
-          apt-get install -y curl gnupg
-          curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
-          apt-get install -y nodejs
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Kind Cluster Setup
+        uses: ./.github/actions/kind-cluster-setup
         with:
-          node-version: '18'
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: 'go.mod'
-      - name: Install Docker CLI
+          cluster_name: periodic-eval-cluster
+      - name: Run evals
+        # In the future, more options (provider/model/tool-use-shim) may be user-selectable.
+        # For now, these are fixed for CI safety and consistency.
+        env:
+          TEST_ARGS: >-
+            --llm-provider ${{ github.event.inputs.llm_provider || 'vertexai' }} \
+            --models ${{ github.event.inputs.model || 'gemini-2.5-pro-preview-05-06' }} \
+            --enable-tool-use-shim=${{ github.event.inputs.enable_tool_use_shim || 'false' }} \
+            --task-pattern=${{ github.event.inputs.task_pattern || 'scale-' }}
         run: |
-          apt-get update
-          apt-get install -y docker.io
-      - name: Set up Kind cluster
-        uses: engineerd/setup-kind@v0.6.1
-      - name: Run k8s-bench evaluations
+          ./dev/ci/periodics/run-evals.sh
+      - name: Analyse results
         run: |
-          go run ./k8s-bench/main.go run \
-            --tasks-dir=k8s-bench/tasks \
-            --output-dir=eval-results \
-            --concurrency=1
-      - name: Upload results
-        uses: actions/upload-artifact@v3
-        with:
-          name: k8s-bench-results
-          path: eval-results
+          ./dev/ci/periodics/analyze-evals.sh
+          cat ${{ github.workspace }}/.build/k8s-bench.md >> ${GITHUB_STEP_SUMMARY}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: false
