--- a/.github/workflows/ci-periodic.yaml
+++ b/.github/workflows/ci-periodic.yaml
@@ -45,9 +45,16 @@ jobs:
         with:
           project_id: "sunilarora-fp"
           workload_identity_provider: "projects/512195022720/locations/global/workloadIdentityPools/github/providers/kubectl-ai"
-      - name: Run an easy eval
+      - name: List and select a random task
+        id: random-task
         run: |
-          TEST_ARGS="--llm-provider vertexai --models gemini-2.5-pro-preview-05-06 --enable-tool-use-shim=false --task-pattern=scale-" ./dev/ci/periodics/run-evals.sh
+          TASKS=($(ls -d k8s-bench/tasks/*/ | xargs -n1 basename))
+          SELECTED_TASK=${TASKS[$RANDOM % ${#TASKS[@]}]}
+          echo "Selected task: $SELECTED_TASK"
+          echo "selected_task=$SELECTED_TASK" >> $GITHUB_OUTPUT
+      - name: Run eval with random task
+        run: |
+          TEST_ARGS="--llm-provider vertexai --models gemini-2.5-pro-preview-05-06 --enable-tool-use-shim=false --task-pattern=^${{ steps.random-task.outputs.selected_task }}$" ./dev/ci/periodics/run-evals.sh
       - name: Analyse results
         run: |
           ./dev/ci/periodics/analyze-evals.sh
